--- a/package.json
+++ b/package.json
@@ -1,10 +1,20 @@
 {
   "name": "vue-infinite-autocomplete",
-  "version": "0.0.0",
+  "version": "1.0.0",
   "description": "Vue infinite-autocomplete Component",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "clean": "rimraf ./dist",
+    "build": "npm run clean && npm run build:umd && npm run build:umd:debug",
+    "watch": "npm run clean && npm run build:watch",
+    "build:watch": "webpack ./src/VueInfiniteAutocomplete.ts ./dist/index.debug.js --output-library-target=\"umd\" --watch",
+    "build:umd": "webpack ./src/VueInfiniteAutocomplete.ts ./dist/index.js --output-library-target=\"umd\" --config webpack.production.config.js",
+    "build:umd:debug": "webpack ./src/VueInfiniteAutocomplete.ts ./dist/index.debug.js --output-library-target=\"umd\"",
+    "prepublish": "npm run validate-build",
+    "validate-build": "npm run tslint && npm run build && npm run test",
+    "test": "echo \"Write tests!\"",
+    "test:watch": "karma start karma.conf.js --single-run false",
+    "tslint": "tslint --fix -c tslint.json 'src/**/*.ts' 'test/**/*.ts'"
   },
   "repository": {
     "type": "git",
@@ -26,5 +36,33 @@
   "bugs": {
     "url": "https://github.com/Attrash-Islam/vue-infinite-autocomplete/issues"
   },
-  "homepage": "https://github.com/Attrash-Islam/vue-infinite-autocomplete#readme"
+  "homepage": "https://github.com/Attrash-Islam/vue-infinite-autocomplete#readme",
+  "devDependencies": {
+    "@types/jasmine": "2.5.40",
+    "coveralls": "2.11.15",
+    "es6-promise": "4.2.4",
+    "ghooks": "2.0.2",
+    "istanbul-instrumenter-loader": "1.2.0",
+    "jasmine-core": "2.5.2",
+    "karma": "1.3.0",
+    "karma-coverage": "1.1.1",
+    "karma-jasmine": "1.1.0",
+    "karma-phantomjs-launcher": "1.0.2",
+    "karma-source-map-support": "1.2.0",
+    "karma-webpack": "2.0.1",
+    "rimraf": "2.5.4",
+    "ts-loader": "3.1.1",
+    "tslint": "5.9.1",
+    "typescript": "2.5.3",
+    "uglifyjs-webpack-plugin": "1.0.1",
+    "webpack": "2.6.1"
+  },
+  "dependencies": {
+    "infinite-autocomplete": "3.2.0"
+  },
+  "config": {
+    "ghooks": {
+      "pre-commit": "npm run validate-build"
+    }
+  }
 }
