--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
     "clean": "rimraf ./dist",
     "build": "npm run clean && npm run build:umd && npm run build:umd:debug",
     "watch": "npm run clean && npm run build:watch",
-    "build:watch": "webpack ./src/VueInfiniteAutocomplete.ts ./dist/index.debug.js --output-library-target=\"umd\" --watch",
-    "build:umd": "webpack ./src/VueInfiniteAutocomplete.ts ./dist/index.js --output-library-target=\"umd\" --config webpack.production.config.js",
-    "build:umd:debug": "webpack ./src/VueInfiniteAutocomplete.ts ./dist/index.debug.js --output-library-target=\"umd\"",
+    "build:watch": "webpack ./src/VueInifiniteAutoComplete.ts ./dist/index.debug.js --output-library-target=\"umd\" --watch",
+    "build:umd": "webpack ./src/VueInifiniteAutoComplete.ts ./dist/index.js --output-library-target=\"umd\" --config webpack.production.config.js",
+    "build:umd:debug": "webpack ./src/VueInifiniteAutoComplete.ts ./dist/index.debug.js --output-library-target=\"umd\"",
     "prepublish": "npm run validate-build",
     "validate-build": "npm run tslint && npm run build && npm run test",
     "test": "echo \"Write tests!\"",
@@ -39,6 +39,7 @@
   "homepage": "https://github.com/Attrash-Islam/vue-infinite-autocomplete#readme",
   "devDependencies": {
     "@types/jasmine": "2.5.40",
+    "@types/vue": "2.0.0",
     "coveralls": "2.11.15",
     "es6-promise": "4.2.4",
     "ghooks": "2.0.2",
@@ -55,6 +56,7 @@
     "tslint": "5.9.1",
     "typescript": "2.5.3",
     "uglifyjs-webpack-plugin": "1.0.1",
+    "vue": "2.5.13",
     "webpack": "2.6.1"
   },
   "dependencies": {
